--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,18 @@
+:root {
+  --primary-color: #495E57;
+  --secondary-color: #F4CE14;
+  --text-dark: #333333;
+  --text-light: #FFFFFF;
+  --background-light: #FFFFFF;
+  --background-dark: #495E57;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
